# Autovideo

./: .gitignore  IMPROVEMENT_PLAN.md  LICENSE  README.md  config.example.toml  main.py  requirements.txt  run-desktop.bat
.github/workflows/: build.yml  release.yml
app/: asgi.py  router.py
app/config/: __init__.py  config.py  config_v2.py  migration.py
app/models/: schema.py
app/plugins/: __init__.py  base.py  manager.py  registry.py  utils.py
app/services/: ai_director.py  analytics.py  animated_captions.py  batch.py  llm.py  material.py  prompt_templates.py  publisher.py  scheduler.py  state.py  subtitle.py  task.py  template.py  video.py  voice.py
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
docs/plan/: 01-phan-tich-hien-trang.md  02-phan-tich-thi-truong.md  03-ke-hoach-phat-trien.md  04-mo-hinh-kinh-doanh.md  05-bao-ve-license.md  06-business-infrastructure.md  07-internationalization.md  08-he-thong-dai-ly.md  09-marketing-growth.md  10-loi-the-canh-tranh.md  11-tham-khao.md  12-roadmap.md  README.md
scripts/: build-installer.py  build-sidecar.py  dev.bat  dev.sh  split-repos.py
templates/corporate/: company-intro.json  product-demo.json
templates/education/: explainer.json
templates/instagram-reels/: lifestyle.json
templates/tiktok/: motivation-quotes.json  product-review.json  (+1 more)
(+94 files in other folders)
